--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -23,7 +23,7 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-            az storage blob upload-batch --account-name azureresumefinal --auth-mode key -d '$web' -s frontend/
+            az storage blob upload-batch --account-name azureresumefinal --auth-mode key -d '$web' -s frontend/ --overwrite
     
 
   # Azure logout
