--- a/backend/api/.gitignore
+++ b/backend/api/.gitignore
@@ -3,6 +3,7 @@
 
 # Azure Functions localsettings file
 local.settings.json
+/backend/tests/bin/Debug/net8.0/local.settings.json
 
 # User-specific files
 *.suo
