--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -1,42 +1,41 @@
-name: DeployBackend
+name: Deploy backend to azure
+
 on:
   push:
     branches: [main]
     paths:
       - 'backend/**'
 
+env:
+  AZURE_FUNCTIONAPP_NAME: 'GetResumeCounterEthan'   # set this to your function app name on Azure
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'backend'       # set this to the path to your function app project, defaults to the repository root
+  DOTNET_VERSION: '6.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
+
 jobs:
   build-and-deploy:
     runs-on: windows-latest
     environment: dev
     steps:
-      - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v3
-
-      - name: 'Login via Azure CLI'
-        uses: azure/login@v1
-        with:
+    - uses: actions/checkout@v3
+    - uses: azure/login@v1
+      with:
           creds: ${{ secrets.AZURECREDENTIALS }}
 
-      - name: 'Retrieve publish profile for deployment'
-        id: publishProfileRetrieval
-        run: |
-          $publishProfiles = az webapp deployment list-publishing-profiles `
-            --name "GetResumeCounterEthan" `
-            --resource-group "getresumecounterethan4" `
-            --subscription "f7f083f1-fcc5-4dee-8439-41c4798dfad2" `
-            --xml
-        shell: pwsh
+    - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: 'Run unit test'
-        shell: pwsh
-        run: |
-          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/tests'
-          dotnet test
+    - name: 'Resolve Project Dependencies Using Dotnet'
+      shell: pwsh
+      run: |
+        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/api'
+        dotnet build --configuration Release --output ./output
+        popd
 
-      - name: 'Run Azure Functions Action'
-        uses: Azure/functions-action@v1
-        id: fa
-        with:
-          app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-          package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/api/output'
+    - name: 'Run Azure Functions Action'
+      uses: Azure/functions-action@v1
+      id: fa
+      with:
+        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
+        package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/api/output'
