--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -1,41 +1,50 @@
-name: Deploy backend to azure
+name: deployBackend
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - 'backend/**'
-
-env:
-  AZURE_FUNCTIONAPP_NAME: 'GetResumeCounterEthan'   # set this to your function app name on Azure
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'backend'       # set this to the path to your function app project, defaults to the repository root
-  DOTNET_VERSION: '6.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
+    push:
+        branches: [ main ]
+        paths:
+        - 'backend/**'
 
 jobs:
-  build-and-deploy:
-    runs-on: windows-latest
-    environment: dev
+  build:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: azure/login@v1
       with:
           creds: ${{ secrets.AZURECREDENTIALS }}
 
-    - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
+    # List files in backend directory before deployment
+    - name: List files in backend directory before deployment
+      run: |
+        ls -la backend/
+
+    # Build the backend .NET project
+    - name: Setup .NET Core
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
+        dotnet-version: '6.0.x'  # Use the .NET version your project targets
 
-    - name: 'Resolve Project Dependencies Using Dotnet'
-      shell: pwsh
+    - name: Restore dependencies
       run: |
-        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/api'
-        dotnet build --configuration Release --output ./output
-        popd
+        cd backend
+        dotnet restore
 
-    - name: 'Run Azure Functions Action'
+    - name: Build the backend
+      run: |
+        cd backend
+        dotnet build --configuration Release
+
+    # Deploy to Azure Function App
+    - name: Deploy to Azure Function App
       uses: Azure/functions-action@v1
-      id: fa
       with:
-        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/api/output'
+        app-name: 'GetResumeCounterEthan'  # Replace with your Azure Function App name
+        package: 'backend'  # Adjust based on your .NET version and target framework
+
+    # Azure logout
+    - name: Logout
+      run: |
+        az logout
+      if: always()
