--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Deploy to Azure Function App
       uses: Azure/functions-action@v1
       with:
-        app-name: 'your-function-app-name'  # Replace with your Azure Function App name
+        app-name: 'GetResumeCounterEthan'  # Replace with your Azure Function App name
         package: 'backend/api/publish'  # Adjust based on your .NET version and target framework
         publish-profile: ${{ secrets.FUNCTIONAPP_PUBLISH_PROFILE }}
 
